--- a/style.css
+++ b/style.css
@@ -9,19 +9,20 @@
 nav h1 {
     color: white;
     text-align: center;
-    margin: 20px 0px;
+    margin: 11px 0px;
 }
 
 .mainContainer {
     background-color: #3B9212;
     width: 450px;
-    height: 450px;
     margin: auto;
     border-radius: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 20px;
+    box-sizing: border-box;
 }
 
 .menu {
@@ -49,8 +50,9 @@ nav h1 {
 }
 
 .grid {
-    width: 90%;
-    height: 90%;
+    width: 400px;
+    /* height: 100%; */
+    height: 400px;
     margin-bottom: 20px;
     display: grid;
     grid-template-rows: repeat(17, 1fr);
@@ -157,4 +159,47 @@ nav h1 {
     border: none;
     margin-top: 46px;
     cursor: pointer;
+}
+
+@media screen and (max-width:500px) {
+    .mainContainer{
+        width: 400px;
+    }
+    .grid{
+        width: 350px;
+        height: 350px;
+    }
+    nav h1 {
+        margin: 30px 0px;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .mainContainer{
+        width: 350px;
+    }
+    .grid{
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width:375px) {
+    .mainContainer{
+        width: 300px;
+    }
+    .grid{
+        width: 250px;
+        height: 250px;
+    }
+}
+
+@media screen and (max-width:315px) {
+    .mainContainer{
+        width: 250px;
+    }
+    .grid{
+        width: 200px;
+        height: 200px;
+    }
 }
