--- a/style.css
+++ b/style.css
@@ -115,10 +115,12 @@ nav h1 {
 }
 .gameOverBox{
     background-color: #4AC0FD;
-    padding: 60px 70px;
+    padding: 60px 0px;
     border-radius: 12px;
     border: 2px solid #1155CC;
     position: relative;
+    width: 300px;
+    text-align: center;
 }
 .gameOverBox .scores{
     display: flex;
@@ -138,16 +140,21 @@ nav h1 {
 }
 
 .gameOverHeading{
-    color: white;
-    background-color: #1155CC;
+    position: absolute;
+    top: -30px;
+    width: 100%;
     text-align: center;
-    padding: 20px 40px;
+}
+.gameOverHeading span{
+    background-color: #1155CC;
+    padding: 20px 40px; 
+    color: white;
+
+    text-align: center;
     font-size: 30px;
     font-weight: bold;
     border-radius: 10px 10px 60px 60px;
-    position: absolute;
-    top: -30px;
-    left: 35px;
+   
 }
 .playAgain{
     border-radius: 12px;
@@ -160,6 +167,15 @@ nav h1 {
     margin-top: 46px;
     cursor: pointer;
 }
+.volume{
+    cursor: pointer;
+}
+
+@media screen and (max-width:600px) {
+    nav h1 {
+        margin: 30px 0px;
+    }
+}
 
 @media screen and (max-width:500px) {
     .mainContainer{
@@ -168,9 +184,6 @@ nav h1 {
     .grid{
         width: 350px;
         height: 350px;
-    }
-    nav h1 {
-        margin: 30px 0px;
     }
 }
 
